# hello

./: CMakeLists.txt
.github/workflows/: cpack.yml
macOs/platform/: common.cmake
macOs/platform/macos/: common.cmake  productbuild.cmake
macOs/platform/macos/macpack/control/pkg/: productbuild.sh
